# Yolov5_DeepSort_Pytorch

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamdata.py  streamdata_rmq.py
old/: track.py
yolo_track/: datasets.py  rmq.py  track.py
yolov5_deepsort_pytorch/: track.py
