[tool.poetry]
name = "yolo_track"
version = "0.1.0"
description = "yolov5 + deepsort + pytorch"
authors = ["redthing1 <redthing1@alt.icu>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
opencv-python = "^4.5.5"
matplotlib = ">=3.2.2"
numpy = ">=1.18.5"

torch = "1.10.2"
torchvision = "0.11.3"

Pillow = ">=7.1.2"
PyYAML = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
tqdm = ">=4.41.0"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
easydict = "^1.9"
Cython = "^0.29.28"
h5py = "^3.6.0"
six = "^1.16.0"
tb-nightly = "^2.9.0-alpha.20220310"
future = "^0.18.2"
yacs = "^0.1.8"
gdown = "^4.4.0"
yapf = "^0.32.0"
isort = "4.3.21"
imageio = "^2.16.1"
pika = "^1.3.0"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
mode-headless = "pip3 install opencv-python-headless==\"4.5.5.64\""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yolo_track = "yolo_track.track:main"